--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,6 +4,11 @@
    box-sizing: border-box;
  }
 
+ a {
+  text-decoration: none;
+  color: inherit;
+ }
+
  .sidebar {
    width: 100%;
    background: #333;
@@ -39,7 +44,6 @@
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    margin-bottom: 2rem;
-   display: none;
  }
 
  label,
@@ -98,6 +102,13 @@
 
  .main {
    padding: 1rem;
+   height: fit-content;
+ }
+
+ footer {
+  background-color: #333;
+  color: white;
+  border-left: 1px solid white;
  }
 
  @media only screen and (min-width: 698px) {
@@ -114,9 +125,13 @@
    }
 
    .main {
-     padding: 2rem;
-     width: 65% !important;
-     margin: 0 auto;
+    width: 65%;
+    margin: 0 auto;
+    min-height: 50vh;
+   }
+
+   .section {
+     width: 100% !important;
    }
 
    .sidebar ul {
